[metadata]
name = spacepackets
description = Various CCSDS and ECSS packet implementations
version = attr: spacepackets.__version__
long_description = file: README.md, NOTICE
long_description_content_type = text/markdown
license = Apache-2.0
author = Robin Mueller
author_email = robin.mueller.m@gmail.com
platform = any

url = https://github.com/robamu-org/py-spacepackets
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Communications
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Scientific/Engineering

[options]
install_requires =
	crcmod>=1.7
package_dir =
    = .
packages = find:
python_requires = >=3.7

[flake8]
max-line-length = 100
ignore = D203, W503
exclude =
	.git,
	__pycache__,
	docs/conf.py,
	old,
	build,
	dist,
	venv
max-complexity = 10
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
